--- a/index.html
+++ b/index.html
@@ -1448,17 +1448,18 @@
 							<span class="nav-text">Refer&Earn Management</span>
 						</a>
 					</li>
-					<li><a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
-                        <i class="flaticon-381-route"></i>
-                            <span class="nav-text">CRM Management</span>
-                        </a>
-                        <ul aria-expanded="false">
-                            <li><a href="./Super_admin_push_notification_management.html">Push Notification</a></li>
-                            <li><a href="./.html">Message</a></li>
-                            <li><a href="./.html">Email</a></li>
-                        
-                        </ul>
-                    </li>
+					<li>
+						<a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
+						<i class="flaticon-381-route"></i>
+						    <span class="nav-text">CRM Management</span>
+						</a>
+						<ul aria-expanded="false">
+						    <li><a href="./Super_admin_push_notification_management.html">Push Notification</a></li>
+						    <li><a href="./Super_admin_message_management.html">Message</a></li>
+						    <li><a href="./Super_admin_email_management.html">Email</a></li>
+
+						</ul>
+				    	</li>
 					
 				<div class="copyright">
 					<p><strong>Cozykit Admin Dashboard</strong> © 2021 All Rights Reserved</p>
