--- a/Super_admin_add_cancelation_policy_management.html
+++ b/Super_admin_add_cancelation_policy_management.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>COZYSTAY </title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<!-- Favicon icon -->
 	<link rel="icon" type="image/png" sizes="16x16" href="./images/favicon.png">
 	<!-- Custom Stylesheet -->
@@ -1300,29 +1301,18 @@
 
 											</div>
 										</div>
-
-										<div class="form-group row px-0">
-											<div class="col-sm-3">
-											</div>
-											<div class="col-sm-9">
-												<div class="custom-control custom-checkbox px-0">
-													<input type="radio" id="free" name="type" value="Free">
-													<label for="free">Free</label>
-													<input type="radio" id="paid" name="type" value="Paid" class="ml-3">
-													<label for="paid">Paid</label>
-												</div>
-											</div>
-										</div>
 										<div class="form-group row" id="percentage_row">
-											<label class="col-sm-3 col-form-label">Percentage for deduction</label>
-											<div class="col-sm-9">
-												<input type="number" class="form-control" placeholder="Percentage">
-											</div>
+											<label class="col-sm-3 col-form-label">Details </label>
 										</div>
 										<div class="form-group row">
-											<label class="col-sm-3 col-form-label">Days for cancelation</label>
-											<div class="col-sm-9">
-												<input type="number" class="form-control" placeholder="Days">
+											<div class="col-3">
+												<input type="number" class="form-control" placeholder="From">
+											</div>
+											<div class="col-3">
+												<input type="number" class="form-control"  placeholder="To">
+											</div>
+											<div class="col-6">
+												<input type="number" class="form-control"  placeholder="Percentage">
 											</div>
 										</div>
 										<div class="form-group row">
@@ -1439,18 +1429,7 @@
 	<script src="./vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 	<script src="./js/custom.min.js"></script>
 	<script src="./js/deznav-init.js"></script>
-	<script>
-		$(function () {
-			$('#percentage_row').hide();
-		});
 
-		$('#paid').change(function () {
-			$('#percentage_row').show();
-		})
-		$('#free').change(function () {
-			$('#percentage_row').hide();
-		})
-	</script>
 
 </body>
 
