--- a/Super_admin_add_cancelation_policy_management.html
+++ b/Super_admin_add_cancelation_policy_management.html
@@ -1347,7 +1347,7 @@
 													<th>Title</th>
 													<th>Description</th>
 													<th>Date</th>
-													<th>Type</th>
+													<th>Details</th>
 													<th>Days for cancelation</th>
 													<th>Action</th>
 												</tr>
@@ -1356,7 +1356,7 @@
 												<tr>
 													<td>Title</td>
 													<td>Description</td>
-													<td>Date</td>
+													<td>from - to : 2%</td>
 													<td>free/paid - 2%</td>
 													<td>Days for cancelation</td>
 													<td>
