--- a/Super_admin_add_cancelation_policy_management.html
+++ b/Super_admin_add_cancelation_policy_management.html
@@ -1356,8 +1356,8 @@
 												<tr>
 													<td>Title</td>
 													<td>Description</td>
+													<td>Date</td>
 													<td>from - to : 2%</td>
-													<td>free/paid - 2%</td>
 													<td>Days for cancelation</td>
 													<td>
 														<button style="color: white;" type="button" class="btn btn-success">Delete</button>
