--- a/index.html
+++ b/index.html
@@ -1460,6 +1460,16 @@
 
 						</ul>
 				    	</li>
+					<li>
+						<a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
+						<i class="flaticon-381-route"></i>
+						    <span class="nav-text">Owner Management</span>
+						</a>
+						<ul aria-expanded="false">
+						    <li><a href="./owner_management_add.html">Add</a></li>
+						    <li><a href="./property_owner_list.html">View All</a></li>
+						</ul>
+				    	</li>
 					
 				<div class="copyright">
 					<p><strong>Cozykit Admin Dashboard</strong> © 2021 All Rights Reserved</p>
