--- a/Owner_more_details.html
+++ b/Owner_more_details.html
@@ -1611,7 +1611,7 @@
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <button type="button" class="btn btn-danger light" data-dismiss="modal">Close</button>
-                                                                <button type="button" class="btn btn-primary">Save changes</button>
+                                                                <button type="button" class="btn btn-primary">Submit</button>
                                                             </div>
                                                         </div>
                                                     </div>
